--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,83 +6,35 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    name: 🇯🇵_JP_日本
     type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
+    server: jp6.lianpi.xyz
+    port: 23234
     cipher: auto
-    uuid: 52cce261-ff53-439a-b97d-f36201842cdb
+    uuid: 1f3d67b4-6929-4598-90ca-84a841bf02e4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
+    network: tcp
   - &id002
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: 172.67.133.117
-    port: 80
-    cipher: auto
-    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm4.shabijichang.com
-  - &id003
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 172.67.1.123
-    port: 80
-    cipher: auto
-    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn4.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: 172.64.195.218
-    port: 80
-    cipher: auto
-    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn2.shabijichang.com
-  - &id005
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: ss
-    server: yidong.liulangdiqiu.cyou
-    port: 10701
-    password: 51239bce-01ab-454d-baa5-c0940c9f1751
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
-    type: ss
-    server: api-wx-2.rancho.gay
-    port: 50005
-    password: 8cfdc816-26ae-4bc0-9dc8-efd58d9c4e47
-    cipher: chacha20-ietf-poly1305
-  - &id007
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.53.250
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: lv2.scproxy.top
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: flkf3.shabijichang.com
     port: 80
     cipher: auto
     uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
@@ -93,33 +45,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: asb3.shabijichang.com
-  - &id008
-    name: 🇺🇸_US_美国_2
+        host: flkf3.shabijichang.com
+  - &id004
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: 104.17.45.51
-    port: 443
-    cipher: auto
-    uuid: F3E36B53-E75E-48C0-B9F1-F918F397E996
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /speedtest
-      headers:
-        host: Kansas.bobbykotick.rip
-  - &id009
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: ss
-    server: hefei.chiguayun.cc
-    port: 27108
-    password: 788c06bf-83b0-4186-b45d-8966efc7c3fc
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm.shabijichang.com
+    server: mm3.shabijichang.com
     port: 80
     cipher: auto
     uuid: f1865e50-2510-46d1-bcb2-e00b4b656305
@@ -130,187 +60,294 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm.shabijichang.com
-  - &id011
-    name: 🇺🇸_US_美国_3
+        host: mm3.shabijichang.com
+  - &id005
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 24962
+    password: cf4d88ea-ae0d-4272-8f75-8eabdf018981
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 55928
+    password: cf4d88ea-ae0d-4272-8f75-8eabdf018981
+    cipher: chacha20-ietf-poly1305
+  - &id007
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
     type: vmess
-    server: 45.199.138.184
-    port: 37831
+    server: 172.67.92.119
+    port: 80
     cipher: auto
-    uuid: 078eb24d-8d1d-4fbd-b914-ee58a897a35e
-    alterId: 64
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇮🇹_IT_意大利
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id008
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 24961
+    password: cf4d88ea-ae0d-4272-8f75-8eabdf018981
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 35.92.39.120
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇨🇳_CN_中国->🇦🇪_AE_阿联酋
     type: ss
     server: yidong.liulangdiqiu.cyou
-    port: 10718
+    port: 10722
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id011
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10703
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇨🇳_CN_中国->🇿🇦_ZA_南非
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10723
     password: 51239bce-01ab-454d-baa5-c0940c9f1751
     cipher: chacha20-ietf-poly1305
   - &id013
-    name: 🇨🇦_CA_加拿大
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 23.227.38.81
-    port: 443
-    cipher: auto
-    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dongtaiwang.com
-      headers:
-        host: d.freeh1.xyz
-  - &id014
-    name: 🇭🇰_HK_香港
-    type: ss
-    server: 20.205.4.27
-    port: 8443
-    password: 6EQ2ezT3Ui
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇻🇳_VN_越南
-    type: vmess
-    server: 103.239.67.2
+    server: 172.67.83.191
     port: 80
     cipher: auto
-    uuid: 0ff0bbb5-35f1-4056-acfe-b62a949e1e24
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /4gspeed.me
-  - &id016
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: trojan
-    server: t-06.outrdp.xyz
-    port: 13029
-    udp: true
-    password: 08edd664-1d09-369b-a876-12f6ebee0b4b
-    sni: ip2648428075.mobgslb.tbcache.com
-    skip-cert-verify: true
-    network: tcp
-  - &id017
+      path: /shirker
+      headers:
+        host: lv2.scproxy.top
+  - &id014
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 156.225.67.153
-    port: 443
+    server: sbl4.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: a7fa8f14-4fb6-4280-9005-d6bbe99c5da9
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694166526848
-      headers:
-        host: www.84550179.xyz
-  - &id018
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vmess
-    server: 104.27.193.64
-    port: 443
-    cipher: auto
-    uuid: 8bb01190-f127-4a5a-9845-e6adf93eccc1
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /pDDgT3v8NaAJHFPuEaDfC8t
+      path: /
       headers:
-        host: avaspeed.jetspeed.fun
+        host: sbl4.shabijichang.com
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 54455
+    password: cf4d88ea-ae0d-4272-8f75-8eabdf018981
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
+    type: vmess
+    server: 172.64.203.172
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id017
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: 18.136.126.26
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10712
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
   - &id019
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_1
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10716
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id020
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 45.199.138.180
-    port: 54885
+    server: 172.64.103.88
+    port: 80
     cipher: auto
-    uuid: d3133484-f2bf-4b0c-8d38-f8e645b65687
-    alterId: 64
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id020
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: lv2.scproxy.top
+  - &id021
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_2
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27145
+    password: 788c06bf-83b0-4186-b45d-8966efc7c3fc
+    cipher: chacha20-ietf-poly1305
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10726
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id023
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27124
+    password: 788c06bf-83b0-4186-b45d-8966efc7c3fc
+    cipher: chacha20-ietf-poly1305
+  - &id024
+    name: 🇫🇷_FR_法国->🇨🇳_CN_中国
+    type: vmess
+    server: 173.245.49.236
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id025
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 45.199.138.190
-    port: 34987
+    server: 162.159.243.53
+    port: 80
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id021
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id026
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 156.225.67.103
-    port: 53790
+    server: 104.27.97.42
+    port: 8443
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: aa0c4744-9568-4bee-a08b-73668a9b2a42
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id022
+    network: ws
+    ws-opts:
+      path: /cloudconebbb
+      headers:
+        host: cloudconebbb.gorgorchicken.one
+  - &id027
     name: 🇺🇸_US_美国_8
     type: vmess
-    server: 45.199.138.162
-    port: 48912
+    server: 104.31.16.46
+    port: 2082
     cipher: auto
-    uuid: 65ea6727-4461-47a7-a5c4-fef2c67f2f79
-    alterId: 64
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id023
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca5.tehme100.fun
+  - &id028
+    name: 🇸🇬_SG_新加坡_2
+    type: ss
+    server: 13.213.53.160
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇺🇸_US_美国->🇭🇰_HK_香港
+    type: vmess
+    server: hk2.mianfenyun012.eu.org
+    port: 8080
+    cipher: auto
+    uuid: a04922f6-5766-49ba-d9fb-8aba40f49277
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jdbp606
+      headers:
+        host: hk2.mianfenyun012.eu.org
+  - &id030
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
+    type: vmess
+    server: 172.64.90.186
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id031
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: 45.199.138.152
-    port: 55446
+    server: yd1.992688.xyz
+    port: 8880
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca4690dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇭🇰_HK_香港->🇨🇦_CA_加拿大
-    type: vmess
-    server: 103.160.204.108
-    port: 80
-    cipher: auto
-    uuid: 7ca21098-691c-4c12-8aac-934b21635423
+    uuid: 27998387-fc3b-4237-9ac9-aba5d00bbd6e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /TG:@hkaa0
+      path: /
       headers:
-        host: 16.wyhkaa0.gq
-  - &id025
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: v101.runba.gq
-    port: 80
-    cipher: auto
-    uuid: 2a8a10fb-9ca3-367e-a234-cf09f841be4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /frfrxxx0fk832v101N
-      headers:
-        host: v101.runba.gq
-  - &id026
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
+        host: haxus3.vpn66.eu.org
+  - &id032
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: wi.saintink.eu.org
     port: 443
@@ -324,36 +361,55 @@ proxies:
       path: /vuk2.0bad.com/chat
       headers:
         host: sub2.saintink.eu.org
-  - &id027
+  - &id033
     name: 🇺🇸_US_美国_10
     type: vmess
-    server: us1.mianfenyun012.eu.org
-    port: 8080
+    server: mrb2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 89e8501d-1a59-4754-cdc2-0e6334b97e3b
+    uuid: 52cce261-ff53-439a-b97d-f36201842cdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /jdbp606
+      path: /
       headers:
-        host: us1.mianfenyun012.eu.org
-  - &id028
-    name: 🇺🇸_US_美国_11
+        host: mrb2.shabijichang.com
+  - &id034
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: 45.199.138.62
-    port: 36307
+    server: hdlb3.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 130c9f2e-42b1-4ebf-b345-e26456a061f9
-    alterId: 64
+    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hdlb3.shabijichang.com
+  - &id035
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
     type: vmess
-    server: 172.67.196.139
+    server: 104.31.16.196
+    port: 443
+    cipher: auto
+    uuid: 6abfe33a-1894-4f62-8879-83b71a35e5fd
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-1.acyun.tk
+  - &id036
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
+    type: vmess
+    server: 172.67.59.39
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -365,32 +421,7 @@ proxies:
       path: /shirker
       headers:
         host: ca.ilovescp.com
-  - &id030
-    name: 🇺🇸_US_美国_12
-    type: trojan
-    server: yuumv-1088-tr-0.d-kcd.tuil.xyz
-    port: 889
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: s3.cjhh.beauty
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 8880
-    cipher: auto
-    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
-      headers:
-        host: fr7.tehme100.fun
-  - &id032
+  - &id037
     name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
     type: vmess
     server: dongtaiwang2.com
@@ -405,51 +436,21 @@ proxies:
       path: /dongtaiwang.com
       headers:
         host: 3.freek1.xyz
-  - &id033
-    name: 🇨🇳_CN_中国_1
+  - &id038
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_5
     type: vmess
-    server: v29.heduian.online
-    port: 30866
-    cipher: auto
-    uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
-    alterId: 2
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /oooo
-      headers:
-        host: v29.heduian.online
-  - &id034
-    name: 🇨🇳_CN_中国_2
-    type: vmess
-    server: v4.heduian.online
-    port: 30866
-    cipher: auto
-    uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
-    alterId: 2
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /oooo
-      headers:
-        host: baidu.com
-  - &id035
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
-    type: vmess
-    server: sg2.wyhkaa0.cf
+    server: 172.64.202.22
     port: 80
     cipher: auto
-    uuid: fc426675-5daa-46c0-d998-61f9f5323e3f
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /TG:@hkaa0
+      path: /shirker
       headers:
-        host: sg2.wyhkaa0.cf
+        host: ca.ilovescp.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -511,6 +512,9 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -551,6 +555,9 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -589,6 +596,9 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
