--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,81 +6,39 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
     type: vmess
-    server: mm3.shabijichang.com
-    port: 80
+    server: zhuanx01.zncloudnet01.xyz
+    port: 3903
     cipher: auto
-    uuid: f1865e50-2510-46d1-bcb2-e00b4b656305
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /6
       headers:
-        host: mm3.shabijichang.com
+        host: live.bilibili.com
   - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: 14.18.106.137
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇭🇰_HK_香港
-    type: trojan
-    server: 103.15.217.182
-    port: 33058
-    udp: true
-    password: QHhbhwe6lj
-    sni: 103.15.217.182
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
+    name: 🇺🇸_US_美国->🇭🇰_HK_香港
     type: vmess
-    server: 156.249.18.48
-    port: 443
+    server: hk2.mianfenyun012.eu.org
+    port: 8080
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1685272124110
-      headers:
-        host: www.69414502.xyz
-  - &id005
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: fr-01.cloudlion.me
-    port: 2082
-    cipher: auto
-    uuid: 87646364-c074-4b95-81cf-4bded967ca02
+    uuid: a04922f6-5766-49ba-d9fb-8aba40f49277
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /jdbp606
       headers:
-        host: fr-01.cloudlion.me
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 54455
-    password: 6b95fbcf-2e3e-472e-b3ad-b7ff33b7afce
-    cipher: chacha20-ietf-poly1305
-  - &id007
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
+        host: hk2.mianfenyun012.eu.org
+  - &id003
+    name: 🇫🇷_FR_法国->🇨🇳_CN_中国
     type: vmess
-    server: 172.64.202.22
+    server: 173.245.49.236
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -92,83 +50,53 @@ proxies:
       path: /shirker
       headers:
         host: ca.ilovescp.com
-  - &id008
-    name: 🇺🇸_US_美国_1
+  - &id004
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
     type: vmess
-    server: 137.175.22.129
-    port: 443
+    server: zhuanx01.zncloudnet01.xyz
+    port: 1393
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694663103114
-      headers:
-        host: www.84913025.xyz
-  - &id009
-    name: 🇫🇷_FR_法国_1
-    type: vmess
-    server: 156.249.18.9
-    port: 443
-    cipher: auto
-    uuid: 5a4d69ad-20a9-4941-b223-87bbd09f5f52
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1684580752213
-      headers:
-        host: www.48643700.xyz
-  - &id010
-    name: 🇫🇷_FR_法国_2
-    type: vmess
-    server: 156.249.18.36
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1685530089600
-      headers:
-        host: www.49291261.xyz
-  - &id011
-    name: 🇺🇸_US_美国->🇰🇷_KR_韩国
-    type: vmess
-    server: se2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /6
       headers:
-        host: se2.shabijichang.com
-  - &id012
-    name: 🇺🇸_US_美国_2
+        host: live.bilibili.com
+  - &id005
+    name: 🇨🇳_CN_中国->🇧🇭_BH_巴林
     type: vmess
-    server: 142.4.126.59
-    port: 443
+    server: zhuanx01.zncloudnet01.xyz
+    port: 36702
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1693737953547
+      path: /6
       headers:
-        host: www.29135019.xyz
-  - &id013
-    name: 🇺🇸_US_美国_3
+        host: live.bilibili.com
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: cnyzcm01.fastbiubiu.com
+    port: 5022
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: live.bilibili.com
+  - &id007
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: ns1.v2-vip.fun
     port: 8880
@@ -182,150 +110,98 @@ proxies:
       path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
         host: fr7.tehme100.fun
+  - &id008
+    name: 🇺🇸_US_美国->🇯🇵_JP_日本
+    type: vmess
+    server: jp.yx.alue.link
+    port: 2052
+    cipher: auto
+    uuid: de0b9c1c-59f6-4433-bb88-0d7286201d90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jp.wx.alue.link
+  - &id009
+    name: 🇨🇳_CN_中国->🇹🇭_TH_泰国
+    type: vmess
+    server: zhuanx01.zncloudnet01.xyz
+    port: 9123
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: live.bilibili.com
+  - &id010
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: zhuanx01.zncloudnet01.xyz
+    port: 3902
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: live.bilibili.com
+  - &id011
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_1
+    type: vmess
+    server: zhuanx01.zncloudnet01.xyz
+    port: 1581
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: live.bilibili.com
+  - &id012
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_4
+    type: vmess
+    server: zhuanx01.zncloudnet01.xyz
+    port: 3904
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: zhuanx01.zncloudnet01.xyz
+  - &id013
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_2
+    type: vmess
+    server: cnzz01.fastbiubiu.com
+    port: 1562
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: live.bilibili.com
   - &id014
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 142.0.140.187
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/211826353201
-      headers:
-        host: www.85351920.xyz
-  - &id015
-    name: 🇫🇷_FR_法国_3
-    type: vmess
-    server: 156.249.18.16
-    port: 443
-    cipher: auto
-    uuid: 375e70f0-5d46-476f-8d69-0fb35c5548a9
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1685094923408
-      headers:
-        host: www.36318181.xyz
-  - &id016
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
-    type: vmess
-    server: 162.159.243.53
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id017
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 5.61.63.236
-    port: 51348
-    password: edluy4GFjro2Fu3zsX
-    cipher: chacha20-ietf-poly1305
-  - &id018
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
-    type: vmess
-    server: 172.67.196.139
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id019
-    name: 🇺🇸_US_美国->🇨🇱_CL_智利
-    type: vmess
-    server: sdyg2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sdyg2.shabijichang.com
-  - &id020
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: wi.saintink.eu.org
-    port: 443
-    cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vuk2.0bad.com/chat
-      headers:
-        host: sub2.saintink.eu.org
-  - &id021
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: flkf3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: flkf3.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
-    type: vmess
-    server: hongkong1145141.baiduvideos.online
-    port: 80
-    cipher: auto
-    uuid: a2517134-4b62-4f0f-98f8-63b4cdad1777
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /11451
-      headers:
-        host: hongkong1145141.baiduvideos.online
-  - &id023
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 52cce261-ff53-439a-b97d-f36201842cdb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id024
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: yd1.992688.xyz
     port: 8880
@@ -339,75 +215,55 @@ proxies:
       path: /
       headers:
         host: haxus3.vpn66.eu.org
-  - &id025
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+  - &id015
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: us3.421421.xyz
+    port: 20230
+    udp: true
+    password: 26af88d0-fc72-43b3-8108-521a7b12aa45
+    sni: 421421.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 172.64.173.224
-    port: 80
+    server: ci.outline-vpn.cloud
+    port: 43123
     cipher: auto
-    uuid: 81fc114e-44d7-44c7-9912-942453b03154
+    uuid: 2566d00f-218c-48f7-9a36-13d3d6f1a724
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 67.21.64.84
+    port: 43123
+    cipher: auto
+    uuid: 2566d00f-218c-48f7-9a36-13d3d6f1a724
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: iran01.biqibao.site
+    port: 2052
+    cipher: auto
+    uuid: 4931e941-77c6-4144-a8b9-5c252ee36c30
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /public?ed=4096
       headers:
-        host: hdlb2.shabijichang.com
-  - &id026
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 104.31.16.46
-    port: 2082
-    cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
-      headers:
-        host: ca5.tehme100.fun
-  - &id027
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_5
-    type: vmess
-    server: 172.64.105.187
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id028
-    name: 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
-    type: ss
-    server: pinhk.cu.edu.kg
-    port: 10113
-    password: 1a1b59e7-4795-49e6-9d0f-4eda1f78c117
-    cipher: chacha20-ietf-poly1305
-  - &id029
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 172.67.120.200
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: lv2.scproxy.top
-  - &id030
-    name: 🇺🇸_US_美国_8
+        host: de2.biqibao.site
+  - &id019
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 172.64.103.88
     port: 80
@@ -421,51 +277,100 @@ proxies:
       path: /shirker
       headers:
         host: lv2.scproxy.top
-  - &id031
-    name: 🇺🇸_US_美国_9
+  - &id020
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
     type: vmess
-    server: 162.159.58.218
+    server: 172.67.149.100
     port: 80
     cipher: auto
-    uuid: cd0c570f-757c-48d2-a1b6-c0940431cc47
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /shirker
       headers:
-        host: nl10gbps.6577617.xyz
-  - &id032
-    name: 🇺🇸_US_美国_10
+        host: ca.ilovescp.com
+  - &id021
+    name: 🇨🇳_CN_中国_1
+    type: ss
+    server: 6007.foamddns.online
+    port: 36100
+    password: a845f902-f4d2-44e8-b774-aea733ae3e48
+    cipher: aes-256-gcm
+  - &id022
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
     type: vmess
-    server: 192.74.228.185
-    port: 443
-    cipher: auto
-    uuid: 051b844f-efe3-4847-92aa-66b5de0b6d4e
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1693992821776
-      headers:
-        host: www.59274706.xyz
-  - &id033
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: asb2.shabijichang.com
+    server: 172.67.211.253
     port: 80
     cipher: auto
-    uuid: f1865e50-2510-46d1-bcb2-e00b4b656305
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /shirker
       headers:
-        host: asb2.shabijichang.com
+        host: ca.ilovescp.com
+  - &id023
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: 103.168.155.69
+    port: 3306
+    udp: true
+    password: 3febb05ea76a940f
+    sni: n2.gladns.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /gateway/connect
+      headers:
+        host: n2.gladns.com
+  - &id024
+    name: 🇨🇳_CN_中国_2
+    type: ss
+    server: cm1-go.go001.buzz
+    port: 31101
+    password: '123456'
+    cipher: aes-256-gcm
+  - &id025
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: ss
+    server: aca-ct-gz-2g-1.cfprefer1.xyz
+    port: 50937
+    password: a845f902-f4d2-44e8-b774-aea733ae3e48
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
+    type: vmess
+    server: zhuanx01.zncloudnet01.xyz
+    port: 3901
+    cipher: auto
+    uuid: ff457027-b44b-3775-8075-da0eeade6f15
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /6
+      headers:
+        host: zhuanx01.zncloudnet01.xyz
+  - &id027
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_5
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 24961
+    password: 6b95fbcf-2e3e-472e-b3ad-b7ff33b7afce
+    cipher: chacha20-ietf-poly1305
+  - &id028
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_6
+    type: ss
+    server: free.node.kk-proxy.pro
+    port: 55928
+    password: 6b95fbcf-2e3e-472e-b3ad-b7ff33b7afce
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -520,11 +425,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -558,11 +458,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -594,11 +489,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
